hphp/test/zend/bad/ext-standard-math/mt_rand_error.php
<?php
mt_rand(25);
mt_rand(10,100,false);
mt_rand("one", 100);
mt_rand(1, "hundered");
?>
